# staubli_experimental

staubli_experimental/: package.xml
staubli_rx160_gazebo/: CMakeLists.txt  package.xml
staubli_rx160_gazebo/launch/: rx160_gazebo.launch  spawn_rx160.launch
staubli_rx160_gazebo/urdf/: _d435.gazebo.xacro  rx160.xacro  rx160_macro.xacro
staubli_rx160_gazebo/worlds/: workcell.world
staubli_rx160_moveit_config/: .setup_assistant  CMakeLists.txt
staubli_rx160_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  staubli_rx160.srdf
staubli_rx160_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_planning_execution.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  staubli_rx160_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
staubli_rx160_support/launch/: robot_interface_streaming_rx160.launch
staubli_rx160_support/urdf/: gripper_macro.xacro  rx160.xacro  rx160_macro.xacro  rx160l_macro.xacro
staubli_tx200_gazebo/: CMakeLists.txt  package.xml
staubli_tx200_gazebo/launch/: load_tx200.launch  spawn_tx200.launch  tx200_control.launch  tx200_gazebo.launch
staubli_tx200_gazebo/models/asus_xtion_pro_camera/: model.sdf
staubli_tx200_gazebo/urdf/: _d435.urdf.xacro  tx200.xacro  tx200_macro.xacro
staubli_tx200_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
staubli_tx200_moveit_config/config/: joint_limits.yaml  staubli_tx200.srdf
staubli_tx200_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  staubli_tx200_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
staubli_tx200_support/: CMakeLists.txt  package.xml
staubli_tx200_support/launch/: load_tx200.launch  load_tx200l.launch  robot_interface_streaming_tx200l.launch  test_tx200.launch  test_tx200l.launch
staubli_tx200_support/tests/: roslaunch_test_tx200.xml  roslaunch_test_tx200l.xml
staubli_tx200_support/urdf/: tx200.xacro  tx200_macro.xacro  tx200l.xacro  tx200l_macro.xacro
staubli_tx2_60_gazebo/: CMakeLists.txt  package.xml
staubli_tx2_60_gazebo/launch/: tx2_60_gazebo.launch
staubli_tx2_60_gazebo/plugins/: SimulationPickandPlace.cc  SimulationPickandPlace.hh
staubli_tx2_60_gazebo/urdf/: _d435.urdf.xacro  asus_xtion_macro.xacro  tx2_60.xacro
staubli_tx2_60_gazebo/worlds/: workcell.world
staubli_tx2_60_moveit_config/: .setup_assistant  package.xml
staubli_tx2_60_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_3d.yaml  staubli_tx2_60.srdf
staubli_tx2_60_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
staubli_tx2_60_moveit_plugins/: CMakeLists.txt  package.xml
staubli_tx2_60_moveit_plugins/tx2_60_kinematics/: CMakeLists.txt  staubli_tx2_60_manipulator_moveit_ikfast_plugin_description.xml
staubli_tx2_60_moveit_plugins/tx2_60_kinematics/src/: staubli_tx2_60_manipulator_ikfast_moveit_plugin.cpp  staubli_tx2_60_manipulator_ikfast_solver.cpp
staubli_tx2_60_support/launch/: robot_interface_streaming_tx2_60.launch
staubli_tx2_60_support/urdf/: gripper_macro.xacro  tx2_60.urdf  tx2_60.xacro
staubli_tx2_90_gazebo/: CMakeLists.txt  package.xml
staubli_tx2_90_gazebo/launch/: load_tx2_90.launch  spawn_tx2_90.launch  tx2_90_control.launch  tx2_90_gazebo.launch
staubli_tx2_90_gazebo/plugins/: SimulationPickandPlace.cc
staubli_tx2_90_gazebo/urdf/: _d435.urdf.xacro  tx2_90.xacro  tx2_90_macro.xacro
staubli_tx2_90_gazebo/worlds/: workcell.world
staubli_tx2_90_moveit_config/: .setup_assistant  package.xml
staubli_tx2_90_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ros_controllers.yaml  staubli_tx2_90.srdf  staubli_tx90.srdf
staubli_tx2_90_moveit_plugins/: CMakeLists.txt  package.xml
staubli_tx2_90_moveit_plugins/staubli_tx2_90_manipulator_ikfast_plugin/: CMakeLists.txt  package.xml  staubli_tx2_90_manipulator_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
staubli_tx2_90_moveit_plugins/staubli_tx2_90_manipulator_ikfast_plugin/src/: staubli_tx2_90_manipulator_ikfast_moveit_plugin.cpp  staubli_tx2_90_manipulator_ikfast_solver.cpp
(+21 files in other folders)
