<?xml version='1.0' encoding='ASCII'?>
<package format="2">
  <name>staubli_tx2_60_moveit_plugins</name>
  <version>0.1.0</version>
  <description>
    <p>
      MoveIt plugins for the Staubli RX160 (and variants).
    </p>
    <p>
      This package contains plugins for use with MoveIt and Staubli RX160
      manipulators. Plugins included support the base model. See the Staubli
      RX160 support package for information on used joint angle and velocity
      limits.
    </p>
    <p>
      Before using any of the plugins included in this package, be sure to 
      check they are correct for the particular robot model and configuration 
      you intend to use them with.
    </p>
  </description>
  <author email="fetulahatas1@gmail.com">>Fetullah Atas</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/staubli_tx2_60_moveit_plugins</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>liblapack-dev</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>


  <export>
    <moveit_core plugin="${prefix}/tx2_60_kinematics/staubli_tx2_60_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
